# dbmerge

./: .gitignore  DOCUMENTATION.md  README.md  llms.txt  pyproject.toml  quick_start.py  user_guide.py
.github/workflows/: test_cockroach.yml  test_mariadb.yml  test_mssql.yml  test_postgresql.yml  test_sqlite.yml
db/cockroach/: cockroach_test.py  docker-compose.yml
db/duckdb_/: duckdb_test.py
db/mssql/: docker-compose.yml
db/oracle/: docker-compose.yml
db/ydb/: docker-compose.yml  ydb.py  ydb_test.py
src/dbmerge/: __init__.py  dbmerge.py
tests/: check_without_pandas.py  env_latest.sh  measure_perf.py  pytest.sh  sample_data_in_pg.py  sample_data_in_sqlite.py  test_all.py  todo.md  user_guide.py
