[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "dbmerge"
version = "1.0.0a"
description = "DBMerge is a python library for automatic merge of table data to an SQL database with insert/update/delete(or mark)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.1",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "psycopg2>=2.9",
    "mariadb>=1.1.5",
    "pytest>=7.1.1",
    "twine",
]
