[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "dbmerge"
version = "1.0.12"
description = "DBMerge is a python library for automatic merge of table data to an SQL database with insert/update/delete(or mark)."
keywords = ["upsert", "merge", "synchronization", "etl", "sqlalchemy", "database-sync"]
authors = [
  { name="Pavel Sobolev", email="pavel-v-sobolev@yandex.ru" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
]

license = "MIT"
license-files = ["LICEN[CS]E*"]


classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pavel-v-sobolev/dbmerge"
Issues = "https://github.com/pavel-v-sobolev/dbmerge/issues"
Documentation = "https://github.com/pavel-v-sobolev/dbmerge/blob/main/DOCUMENTATION.md"
Examples = "https://github.com/pavel-v-sobolev/dbmerge/blob/main/user_guide.py"
Repository = "https://github.com/pavel-v-sobolev/dbmerge"
Changelog = "https://github.com/pavel-v-sobolev/dbmerge/releases"


[tool.hatch.build.targets.wheel]
packages = ["src/dbmerge"]

[project.optional-dependencies]
dev = [
    "pandas>=2.0.1",
    "psycopg2>=2.9",
    "mariadb>=1.1.5",
    "pytest>=7.1.1",
    "duckdb_engine",
    "pyodbc",
    "twine",
    "build",
]
