[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "dbmerge"
version = "1.0.19"
description = "Database-agnostic UPSERT (insert/update/delete) for Python: merge pandas/polars DataFrames or dicts into PostgreSQL, MySQL/MariaDB, SQLite, MS SQL Server and CockroachDB via SQLAlchemy."

keywords = [
    "sql","database","etl","upsert","merge","dwh","python",
    "sqlalchemy","pandas","polars",
    "data-engineering","synchronization","database-sync","bulk-insert",
    "postgres","mysql","mariadb","sqlite","mssql","sql-server","cockroachdb"
]

authors = [
  { name="Pavel Sobolev", email="pavel-v-sobolev@yandex.ru" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
]

license = "MIT"
license-files = ["LICEN[CS]E*"]


classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/pavel-v-sobolev/dbmerge"
Issues = "https://github.com/pavel-v-sobolev/dbmerge/issues"
Documentation = "https://github.com/pavel-v-sobolev/dbmerge/blob/main/DOCUMENTATION.md"
Examples = "https://github.com/pavel-v-sobolev/dbmerge/blob/main/user_guide.py"
Repository = "https://github.com/pavel-v-sobolev/dbmerge"
Changelog = "https://github.com/pavel-v-sobolev/dbmerge/releases"


[tool.hatch.build.targets.wheel]
packages = ["src/dbmerge"]

[tool.hatch.build.targets.sdist]
include = [
    "src/dbmerge",
    "README.md",
    "DOCUMENTATION.md",
    "llms.txt",
    "user_guide.py",
    "quick_start.py",
]

[project.optional-dependencies]
pandas = [
    "pandas>=2.0.1",
]
polars = [
    "polars",
]
dev = [
    "pandas>=2.0.1",
    "polars",
    "pyarrow",
    "psycopg2>=2.9",
    "mariadb>=1.1.5",
    "pytest>=7.1.1",
    "duckdb_engine",
    "pyodbc",
    "twine",
    "build",
    "ydb-sqlalchemy",
    "sqlalchemy-cockroachdb"
]
